--- a/CSS/owl.theme.default.css
+++ b/CSS/owl.theme.default.css
@@ -48,8 +48,8 @@
       border-radius: 30px; }
 
     .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-      background: #777;
-      border: 1px solid #777;
+      background: #40c9f1;
+      border: 1px solid #40c9f1;
        }
 
 
